--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: CI and CD with GitHub
 description: A demo blog
-email: stefan@github.com
+email: mailhareesh@gmail.com
 twitter_username: me_stoe
 github_username:  stoe
 baseurl:
